--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.1",
     "tailwind-merge": "^3.2.0",
